change  d3 position _dumb.html

--- a/games/_doom.html
+++ b/games/_doom.html
@@ -404,8 +404,21 @@
                     </dl>
                 </a>
                             </nav>
-
-                            <div class="aside_ad">
+        </div>
+        <div class="verified">
+            <dl>
+                <dt>
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-anquan"></use>
+                    </svg>
+                    Verified antivirus
+                </dt>
+                <dd>All download links on this website jump to official platforms such as App Store and Google Play. No
+                    viruses. No malware.
+                </dd>
+            </dl>
+        </div>
+              <div class="banner_ad">
            <script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js" crossorigin="anonymous"></script>
   
      <script src=".././lazyload.min.js"></script>
@@ -455,19 +468,14 @@
           googletag.enableServices();
         });
       </script>
-        </div>
-        <div class="verified">
-            <dl>
-                <dt>
-                    <svg class="icon" aria-hidden="true">
-                        <use xlink:href="#icon-anquan"></use>
-                    </svg>
-                    Verified antivirus
-                </dt>
-                <dd>All download links on this website jump to official platforms such as App Store and Google Play. No
-                    viruses. No malware.
-                </dd>
-            </dl>
+            <!-- /23330730517/gamecenter7.com_d3 -->
+            <div id='div-gpt-ad-1766483079328-0' style='min-width: 300px; min-height: 250px;'>
+                <script>
+                    googletag.cmd.push(function () {
+                        googletag.display('div-gpt-ad-1766483079328-0');
+                    });
+                </script>
+            </div>
         </div>
         <div class="desc_pat">
             <h2 class="container category_name">Description</h2>
@@ -748,16 +756,7 @@
                 
             </ul>
         </div>
-        
-            <!-- /23330730517/gamecenter7.com_d3 -->
-            <div id='div-gpt-ad-1766483079328-0' style='min-width: 300px; min-height: 250px;'>
-                <script>
-                    googletag.cmd.push(function () {
-                        googletag.display('div-gpt-ad-1766483079328-0');
-                    });
-                </script>
-            </div>
-        </div>
+
         <div class="aside_pat">
             <h2><a href="../more/3.html">Hot Games <i class="iconfont icon-youjiantou"></i></a></h2>
             <ul>
